@startuml
title ERD - Sales and Distribution Company V1
skinparam linetype ortho

entity Product {
  +product_id : int <<PK>>
  --
  category : string
  name : string
  unit_price : float
  stock_quantity : int
}

entity Client {
  +client_id : int <<PK>>
  --
  first_name : string
  last_name : string
  address : string
  city : string
}

entity Employee {
  +employee_id : int <<PK>>
  --
  first_name : string
  last_name : string
  role : string
}

entity Order {
  +order_id : int <<PK>>
  --
  order_date : date
  client_id : int <<FK>>
  employee_id : int <<FK>>
}

entity OrderLine {
  +order_id : int <<PK, FK>>
  +product_id : int <<PK, FK>>
  --
  quantity : int
}

Client ||--o{ Order
Employee ||--o{ Order
Order ||--o{ OrderLine
Product ||--o{ OrderLine

@enduml
